<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jxnflzc.firstapplication.MainActivity">


    <TextView
        android:id="@+id/txtSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/sex"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSex" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sex_tip"
        android:inputType="number"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/txtAge"
        app:layout_constraintTop_toBottomOf="@+id/spnSex" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:text="提交"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAge" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="重置"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
        app:layout_constraintStart_toEndOf="@+id/btnSubmit" />

    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:entries="@array/sex_list"
        android:prompt="@string/spn_sex_list_promppt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/txtSex"
        app:layout_constraintStart_toEndOf="@+id/txtSex"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtOurselves"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtOurselves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_try"
        android:textColor="#0400ff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:text="@string/version"
        android:textColor="#0400ff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

